test/corpus/accessing.txt
================================================================================
Index
================================================================================

a[1]

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (index_expression
      (identifier)
      (int_literal))))

================================================================================
Deep index
================================================================================

a[1][2]

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (index_expression
      (index_expression
        (identifier)
        (int_literal))
      (int_literal))))

================================================================================
Selector
================================================================================

a.b

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (selector_expression
      (identifier)
      (field_identifier))))

================================================================================
Deep selector
================================================================================

a.b.c

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (selector_expression
      (selector_expression
        (identifier)
        (field_identifier))
      (field_identifier))))
