test/corpus/assignment.txt
================================================================================
Regular assign
================================================================================

a = 1

--------------------------------------------------------------------------------

(source_file
  (assignment_statement
    (identifier)
    (int_literal)))

================================================================================
Self-referring assign
================================================================================

a *= 1
a -= 1
a += 1
a /= 1

--------------------------------------------------------------------------------

(source_file
  (assignment_statement
    (identifier)
    (int_literal))
  (assignment_statement
    (identifier)
    (int_literal))
  (assignment_statement
    (identifier)
    (int_literal))
  (assignment_statement
    (identifier)
    (int_literal)))

================================================================================
Assign to index
================================================================================

a[1] = 1

--------------------------------------------------------------------------------

(source_file
  (assignment_statement
    (index_expression
      (identifier)
      (int_literal))
    (int_literal)))

================================================================================
Assign from index
================================================================================

a = b[1]

--------------------------------------------------------------------------------

(source_file
  (assignment_statement
    (identifier)
    (index_expression
      (identifier)
      (int_literal))))
