test/corpus/declaration.txt
================================================================================
Const
================================================================================

const a = 1

--------------------------------------------------------------------------------

(source_file
  (const_declaration
    (identifier)
    (int_literal)))

================================================================================
Var
================================================================================

var a = 1

--------------------------------------------------------------------------------

(source_file
  (var_declaration
    (identifier)
    (int_literal)))
