test/corpus/expression_ternary.txt
================================================================================
Ternary expression
================================================================================

true ? "foo" : bar

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (conditional_expression
      (true)
      (string)
      (identifier))))
