test/corpus/literal_consts.txt
================================================================================
Bool true
================================================================================

true

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (true)))

================================================================================
Bool false
================================================================================

false

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (false)))

================================================================================
Nil
================================================================================

nil

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (nil)))
