test/corpus/statement_for.txt
================================================================================
Range single key
================================================================================

for i := range mymap { }

--------------------------------------------------------------------------------

(source_file
  (for_statement
    (range_clause
      (expression_list
        (identifier))
      (identifier))
    (block)))

================================================================================
Range key and value
================================================================================

for k, v := range myarr { }

--------------------------------------------------------------------------------

(source_file
  (for_statement
    (range_clause
      (expression_list
        (identifier)
        (identifier))
      (identifier))
    (block)))

================================================================================
Range var
================================================================================

for var i = range mymap { }

--------------------------------------------------------------------------------

(source_file
  (for_statement
    (range_clause
      (expression_list
        (identifier))
      (identifier))
    (block)))

================================================================================
Range const
================================================================================

for const i = range mymap { }

--------------------------------------------------------------------------------

(source_file
  (for_statement
    (range_clause
      (expression_list
        (identifier))
      (identifier))
    (block)))

================================================================================
Iterate var
================================================================================

for var i = 0; true; false { }

--------------------------------------------------------------------------------

(source_file
  (for_statement
    (for_clause
      (var_declaration
        (expression_list
          (identifier))
        (int_literal))
      (true)
      (expression_statement
        (false)))
    (block)))

================================================================================
Iterate short assign
================================================================================

for i := 0; true; false { }

--------------------------------------------------------------------------------

(source_file
  (for_statement
    (for_clause
      (short_var_declaration
        (expression_list
          (identifier))
        (int_literal))
      (true)
      (expression_statement
        (false)))
    (block)))

================================================================================
Forever loop
================================================================================

for { }

--------------------------------------------------------------------------------

(source_file
  (for_statement
    (block)))

================================================================================
While loop
================================================================================

for true { }

--------------------------------------------------------------------------------

(source_file
  (for_statement
    (true)
    (block)))
