test/corpus/statement_if.txt
================================================================================
Empty block
================================================================================

if true {
}

--------------------------------------------------------------------------------

(source_file
  (if_statement
    (true)
    (block)))

================================================================================
With block
================================================================================

if true {
  123
}

--------------------------------------------------------------------------------

(source_file
  (if_statement
    (true)
    (block
      (expression_statement
        (int_literal)))))

================================================================================
Else
================================================================================

if true {
} else {
}

--------------------------------------------------------------------------------

(source_file
  (if_statement
    (true)
    (block)
    (block)))

================================================================================
Else If
================================================================================

if true {
} else if true {
}

--------------------------------------------------------------------------------

(source_file
  (if_statement
    (true)
    (block)
    (if_statement
      (true)
      (block))))

================================================================================
Else If Else
================================================================================

if true {
} else if true {
} else {
}

--------------------------------------------------------------------------------

(source_file
  (if_statement
    (true)
    (block)
    (if_statement
      (true)
      (block)
      (block))))
